--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "typocitos-game",
   "version": "1.0.0",
   "scripts": {
-    "clear:publish": "if exist ./dist (rmdir /s /q ./dist)",
-    "clear:game": "if exist ../typocitos/dist (rmdir /s /q ../typocitos/dist)",
+    "clear:publish": "rimraf ./dist",
+    "clear:game": "rimraf ../typocitos/dist",
     "install:docs": "cd ../typocitos/api && npm prune && npm i",
     "install:game": "cd ../typocitos && npm prune && npm i",
     "install:this": "npm prune && npm i",
@@ -11,10 +11,11 @@
     "build:game": "cd ../typocitos && npm i && npm run-script lint && npm run-script build",
     "build:mv": "move ../typocitos/dist ./dist",
     "publish": "gh-pages -d dist",
-    "all": "run-s clear:* install:* build:docs build:game build:mv"
+    "all": "run-s clear:* install:* build:docs build:game build:mv publish"
   },
   "devDependencies": {
     "gh-pages": "^6.2.0",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^6.0.1"
   }
 }
