--- a/package.json
+++ b/package.json
@@ -2,20 +2,14 @@
   "name": "typocitos-game",
   "version": "1.0.0",
   "scripts": {
-    "clear:publish": "rimraf ./dist",
-    "clear:game": "rimraf ../typocitos/dist",
-    "install:docs": "cd ../typocitos/api && npm prune && npm i",
-    "install:game": "cd ../typocitos && npm prune && npm i",
-    "install:this": "npm prune && npm i",
-    "build:docs": "cd ../typocitos/api && npm i && npm run-script docs",
-    "build:game": "cd ../typocitos && npm i && npm run-script lint && npm run-script build",
-    "build:mv": "move ../typocitos/dist ./dist",
-    "publish": "gh-pages -d dist",
-    "all": "run-s clear:* install:* build:docs build:game build:mv publish"
+    "release": "tsx release.ts"
   },
   "devDependencies": {
+    "@types/node": "^22.9.1",
     "gh-pages": "^6.2.0",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3"
   }
 }
