--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   },
   "devDependencies": {
     "@types/node": "^22.9.1",
+    "@types/shelljs": "^0.8.15",
     "gh-pages": "^6.2.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
+    "shelljs": "^0.8.5",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
